# Starminder

./: .editorconfig  .env-template  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Dockerfile  Dockerfile_caddy  LICENSE  Makefile  Pipfile  Procfile  README.md  README.rst  SECURITY.md  constants.py  defaults.ini  docker-compose.yaml  docker-compose.yml  email.md  helpers.py  justfile  manage.py  modd.conf  notifier.py  pyproject.toml  requirements.txt  starminder.py  worker.py
.github/: CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: code-quality-checks.yml  docker-publish.yml  quality-checks.yml  run_code_quality_checks.yml  run_starminder.yml  run_tests.yml
.github/workflows/templates/: run_starminder.yml
config/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: deploy.sh  entrypoint.sh
starminder/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
starminder/content/: admin.py  apps.py  email.py  linkcheck.py  models.py  urls.py  views.py
starminder/content/migrations/: 0001_initial.py  0002_alter_entry_options.py  0002_rename_post_reminder_alter_reminder_options_and_more.py  0003_entry_name.py  0003_rename_entry_star_alter_star_options.py  0004_alter_entry_options_alter_post_options.py  0004_alter_star_project_url_alter_star_repo_url.py  0005_star_description_temp.py  0006_copy_description_to_temp.py  0007_remove_star_description.py  0008_rename_description_temp_star_description.py  0009_star_archived.py  0010_star_description_flagged_star_name_flagged_and_more.py  0010_star_token.py  0011_populate_star_token.py  0012_alter_star_token.py
starminder/core/: __init__.py  admin.py  apps.py  context_processors.py  forms.py  models.py  push.py  test_temp.py  urls.py  views.py
starminder/implementations/: admin.py  apps.py  base.py  factory.py  getters.py  github.py  jobs.py  models.py
starminder/main/: admin.py  email.py  encryption.py  forms.py  middleware.py  models.py  urls.py  views.py
static/: style.css  style.scss
static/style/: _fonts.scss  _main.scss  style.css  style.scss
templates/: email.html  email.txt  index.html
tests/: test_generate_name.py  test_generate_star_data.py  test_randomize_stars.py  test_reconcile_count.py
(+83 files in other folders)
