[project]
name = "Starminder"
version = "4.0.0"  # TODO CalVer for first release
dependencies = [
    "django>=5.2.7",
    "django-allauth>=65.12.0",
]
requires-python = ">=3.13"
authors = [
    { name = "Nik Kantar", email = "nik@nkantar.com" },
]
description = "Remind yourself of your GitHub stars"
readme = "README.md"
license = {file = "LICENSE"}

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
    "ruff>=0.14.0",
    "ty>=0.0.1a21",
]
