[project]
name = "Starminder"
version = "4.0.0"  # TODO CalVer for first release
dependencies = [
    "croniter>=6.0.0",
    "django>=5.2.7",
    "django-allauth[socialaccount]>=65.12.0",
    "django-q2>=1.8.0",
    "htpy>=25.10.0",
    "loguru>=0.7.3",
    "parsenvy>=3.0.3",
    "pygithub>=2.8.1",
    "python-dotenv>=1.1.1",
]
requires-python = ">=3.13"
authors = [
    { name = "Nik Kantar", email = "nik@nkantar.com" },
]
description = "Remind yourself of your GitHub stars"
readme = "README.md"
license = {file = "LICENSE"}

[dependency-groups]
dev = [
    "django-stubs>=5.2.7",
    "pdbpp>=0.11.7",
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
    "ruff>=0.14.0",
    "ty>=0.0.1a21",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "starminder.settings"
