[project]
name = "Starminder"
version = "25.10.13.1"
dependencies = [
    "croniter>=6.0.0",
    "dj-database-url>=3.0.1",
    "django>=5.2.7",
    "django-allauth[socialaccount]>=65.12.0",
    "django-q2>=1.8.0",
    "emoji>=2.15.0",
    "granian[pname]>=2.5.5",
    "htpy>=25.10.0",
    "httpx>=0.28.1",
    "httpx-retries>=0.4.3",
    "loguru>=0.7.3",
    "parsenvy>=3.0.3",
    "psycopg[binary]>=3.2.10",
    "python-dotenv>=1.1.1",
    "sentry-sdk[django]>=2.41.0",
    "whitenoise[brotli]>=6.11.0",
]
requires-python = ">=3.13"
authors = [
    { name = "Nik Kantar", email = "nik@nkantar.com" },
]
description = "Remind yourself of your GitHub stars"
readme = "README.md"
license = {file = "LICENSE"}

[dependency-groups]
dev = [
    "django-stubs>=5.2.7",
    "pdbpp>=0.11.7",
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
    "ruff>=0.14.0",
    "ty>=0.0.1a21",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "starminder.settings"
